--- a/src/app.html
+++ b/src/app.html
@@ -38,5 +38,16 @@
   body {
     font-family: "Roboto", sans-serif;
     background-color: var(--bg);
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+  }
+
+  .centerer {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 </style>
