Add choosing and deleting packs, also autoscaling of grid in Gameboard

--- a/src/app.html
+++ b/src/app.html
@@ -26,13 +26,20 @@
   :root {
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-    --primary: #B21212;
+/*     --primary: #B21212;
     --secondary: #f97316;
     --accent: #EA906C;
     --bg: #111827;
     --success: #22C55e;
     --warining: #f59e0b;
-    --error: #9f1239;
+    --error: #9f1239; */
+    --primary: #9f1239;
+    --secondary: #f97316;
+    --accent: #EA906C;
+    --bg: #111827;
+    --success: #22C55e;
+    --warining: #f59e0b;
+    --error: rgb(219, 21, 21);
   }
 
   body {
