--- a/src/app.html
+++ b/src/app.html
@@ -47,14 +47,7 @@
     background-color: var(--bg);
     height: 100vh;
     display: flex;
-    justify-content:center;
-    align-items:center;
+    flex-direction: column;
   }
 
-  .centerer {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 </style>
